styles.css
/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
  padding: 0;
  font-family: 'Courier New', Courier, monospace;
}

body {
  /* 3. Add accessible line-height */
  line-height: 1.5;
  /* 4. Improve text rendering */
  -webkit-font-smoothing: antialiased;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px dotted rgb(96 139 168);
  flex-direction: column;
}

fieldset {
  margin: 2em 0;
  padding: 1em 2em;
  border: solid 1px #ccc;
  border-radius: 6px;
  min-width: 200px;
}

label {
  display: block;
  margin-top: 1em;
}

label:first-of-type {
  margin-top: 0;
}

input {
  padding: .5em;
  border: solid 1px #999;
}

button {
  padding: .5em 1em;
  border-radius: 6px;
  border: solid 1px #999;
}

.centre {
  text-align: center;

}

#form-container {
  margin: 2em 0;
  padding: 1em 2em;
  border: solid 1px #ccc;
  border-radius: 6px;
}

.form-structure {
  display: none;
}

#lib-container {
  margin: 2em 0;
  padding: 1em 2em;
  border: solid 1px #ccc;
  border-radius: 6px;
  min-width: 200px;
}

.book {
  margin: 2em 0;
  padding: 1em 2em;
  border: solid 1px #ccc;
  border-radius: 6px;
  display: block;
}


#new-book-btn {
  margin: 0 auto;
  display: block;
}

